--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,25 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
+    "@mui/system": "^5.11.14",
     "@mui/x-data-grid": "^6.0.3",
     "@types/node": "18.15.9",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "i18next": "^22.4.13",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
+    "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.9.0"
   }
 }
